# visual-monitor

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
configs/backends/: internvl3_5_2b_hf.yaml  internvl3_5_2b_vllm.yaml  lfm25_vl_1_6b_hf.yaml  ministral3_3b_hf.yaml  ministral3_3b_vllm.yaml  mock_noisy.yaml  mock_oracle.yaml  moondream2_hf.yaml  phi3_5_vision_onnx.yaml  provider_baseline.yaml  qwen3_vl_2b_hf.yaml  qwen3_vl_2b_vllm.yaml  smolvlm2_2_2b_hf.yaml  smolvlm2_2_2b_vllm.yaml  together_gemma_3n_e4b.yaml  together_qwen3_5_9b.yaml
configs/eval/: default.yaml  industrial_safety.yaml  onnx_matrix.yaml  retail_shelf.yaml  small_vlm_matrix.yaml  subtlebench_onnx.yaml  subtlebench_together.yaml  subtlebench_together_30.yaml  subtlebench_vllm.yaml
configs/serving/: local.yaml
data/labels/: labels_v1.jsonl
data/tasks/: dev_tasks.jsonl  (+2 more)
docs/: evaluation_methodology.md  model_backend_notes.md  runbook.md
prompts/: object_presence_v1.txt  retail_shelf_v1.txt  retail_shelf_v2.txt  safety_check_v1.txt  subtlebench_multiple_choice_v1.txt
schemas/: object_presence_schema.json  retail_shelf_schema.json  safety_check_schema.json  subtlebench_multiple_choice_schema.json
scripts/: run_comparison.sh  run_eval.sh  run_latency_benchmark.sh  start_api.sh  start_vllm.sh
tests/: test_json_validation.py  test_metrics.py  test_onnx_backend.py  test_openai_compatible_backend.py  test_release_decision.py  test_review_routing.py  test_serving_backend_manager.py  test_subtlebench_adapter.py  test_task_loader.py  test_vllm_backend.py
(+47 files in other folders)
