[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vlm-serving-evals"
version = "0.1.0"
description = "Production-style evaluation and serving benchmark for small visual language models."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "openai>=1.0",
  "pydantic>=2.0",
  "pyyaml>=6.0",
  "uvicorn>=0.25",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]
vllm = [
  "vllm",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
